--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,84 @@
-//
+@import 'partials/variables';
+@import 'partials/mixins';
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+/**** Reset ****/
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+/**** Utility classes ****/
+
+.container {
+	margin: 0 auto;
+	max-width: 800px;
+}
+
+.centering-wrapper {
+	@include flex(center, center, 0);
+}
+
+.primary {
+	color: $primaryColor;
+}
+
+.secondary {
+	color: $secondaryColor;
+}
+
+.text-light {
+	color: $fontColorLighter;
+}
+
+.italic {
+	font-style: italic;
+}
+
+.bold {
+	font-weight: 600;
+}
+
+.text-secondary {
+	color: $secondaryColor;
+}
+
+.txt-center {
+	text-align: center;
+}
+
+/**** Utility classes ****/
+
+
+body {
+	font-weight: 200;
+	background-color: #3e3e3e;
+	font-family: 'Raleway', sans-serif;
+	header {
+		color: $secondaryColor;
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
+		background-color: $primaryColor;
+		padding: 0 2rem;
+		line-height: 8vh;
+		height: 8vh;
+	}
+	main {
+		min-height: 92vh;
+		
+		section#trains {
+			padding: 3rem 0;
+			div.train {
+				padding: 2rem;
+				border-radius: 30px;
+				margin-bottom: 1rem;
+				box-shadow: 1px 1px 3px $primaryColor;
+				@include flex( space-between, center, 1rem );
+				div.cell {
+					width: 15%;
+				}
+			}
+		}
+	}
+}
