--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,6 +5,15 @@
   padding: 0;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
 /**** Utility classes ****/
 .container {
   margin: 0 auto;
@@ -106,4 +115,14 @@ body main section#trains div.train div.departure::after {
 body main section#trains div.train div.info {
   padding-left: 2rem;
   border-left: 1px solid rgb(36, 118, 156);
+}
+body main div#pagination nav ul {
+  padding: 0.7rem;
+  font-weight: bold;
+  border-radius: 15px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
