--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,15 @@
 	padding: 0;
 }
 
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+ul {
+	list-style-type: none;
+}
+
 /**** Utility classes ****/
 
 .container {
@@ -102,6 +111,16 @@ body {
 					border-left: 1px solid $borderColor;
 				}
 			}
+		}
+		div#pagination {
+			nav ul{
+				padding: 0.7rem;
+				font-weight: bold;
+				border-radius: 15px;
+				background-color: white;
+				@include flex (center, center, 2rem);
+			}
+			
 		}
 	}
 }
