--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -29,6 +29,24 @@ ul {
 	@include flex(center, center, 0);
 }
 
+.btn {
+	background-color: $secondaryColor;
+	padding: 0.4rem 0.5rem;
+	font-size: 0.8rem;
+	font-weight: bold;
+	border-radius: 18px;
+}
+
+.btn.primary {
+	color: $secondaryColor;
+	background-color: $primaryColor;
+}
+
+.btn.secondary {
+	color: $primaryColor;
+	background-color: $secondaryColor;
+}
+
 .primary {
 	color: $primaryColor;
 }
@@ -60,6 +78,13 @@ ul {
 /**** Utility classes ****/
 
 
+.train {
+	padding: 2rem 5rem;
+	border-radius: 30px;
+	margin-bottom: 1rem;
+	background-color: white;
+}
+
 body {
 	font-weight: 200;
 	background-color: $secondaryColor;
@@ -75,14 +100,10 @@ body {
 	}
 	main {
 		min-height: 92vh;
-		
 		section#trains {
 			padding: 3rem 0;
 			div.train {
-				padding: 2rem 5rem;
-				border-radius: 30px;
 				margin-bottom: 1rem;
-				background-color: white;
 				@include flex( space-between, flex-start, 1rem );
 				h4,
 				h5,
@@ -108,6 +129,9 @@ body {
 				div.info {
 					padding-left: 2rem;
 					border-left: 1px solid $borderColor;
+					p:last-of-type {
+						margin-bottom: 1rem;
+					}
 				}
 			}
 		}
@@ -125,6 +149,12 @@ body {
 					}
 				}
 			}
+		}
+	}
+	section#train-detail {
+		padding: 3rem 0;
+		div.train {
+			margin-bottom: 2rem;
 		}
 	}
 }
