--- a/public/css/app.css
+++ b/public/css/app.css
@@ -115,7 +115,7 @@ body main section#trains div.train p {
   margin-bottom: 0.3rem;
 }
 body main section#trains div.train div.cell {
-  width: 20%;
+  width: 25%;
 }
 body main section#trains div.train div.departure {
   position: relative;
@@ -123,7 +123,7 @@ body main section#trains div.train div.departure {
 body main section#trains div.train div.departure::after {
   content: "";
   height: 10px;
-  width: 100px;
+  width: 60px;
   color: black;
   display: block;
   border-bottom: 1px solid rgb(36, 118, 156);
@@ -132,6 +132,14 @@ body main section#trains div.train div.departure::after {
   right: inherit;
   bottom: 50%;
   left: 100%;
+}
+body main section#trains div.train div.arrival {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  gap: 0;
+  flex-direction: column;
+  height: 110px;
 }
 body main section#trains div.train div.info {
   padding-left: 2rem;
@@ -159,8 +167,21 @@ body main div#pagination nav ul li.active {
 body section#train-detail {
   padding: 3rem 0;
 }
-body section#train-detail div.train {
-  margin-bottom: 2rem;
+body section#train-detail a.btn {
+  margin-left: 1rem;
+}
+body section#train-detail div.container {
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+}
+body section#train-detail div.container div.train {
+  flex-basis: 100%;
+}
+body section#train-detail div.container div.train h4, body section#train-detail div.container div.train p {
+  margin-bottom: 0.45rem;
 }
 
 header,
