--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -112,19 +112,24 @@ body {
 					margin-bottom: 0.3rem;
 				}
 				div.cell {
-					width: 20%;
+					width: 25%;
 				}
 				div.departure {
 					position: relative;
 					&::after {
 						content: '';
 						height: 10px;
-						width: 100px;
+						width: 60px;
 						color: black;
 						display: block;
 						border-bottom: 1px solid $borderColor; 
 						@include position(absolute, inherit, inherit, 50%, 100%);
 					}
+				}
+				div.arrival {
+					@include flex( space-between, baseline, 0);
+					flex-direction: column;
+					height: 110px;
 				}
 				div.info {
 					padding-left: 2rem;
@@ -153,8 +158,18 @@ body {
 	}
 	section#train-detail {
 		padding: 3rem 0;
-		div.train {
-			margin-bottom: 2rem;
+		a.btn {
+			margin-left: 1rem;
+		}
+		div.container {
+			height: 70vh;
+			@include flex(center, center, 0);
+			div.train {
+				flex-basis: 100%;
+				h4, p {
+					margin-bottom: 0.45rem;
+				} 
+			}
 		}
 	}
 }
